[package]
name = "verinest"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"]}
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"]}
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
time = "0.3.20"
tower-http = { version = "0.5.2", features = ["cors","trace"] }
tracing-subscriber = { version = "0.3.18"}
lettre = "0.11.7"
rand = "0.9.2"
tracing = "0.1.41"
reqwest = { version = "0.11.18", features = ["json"] }
serde_urlencoded = "0.7.1"
web3 = { version = "0.19.0", features = ["signing"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
thiserror = "1.0"
google-jwt-auth = "0.1"
urlencoding = "2.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
tract-onnx = "0.20"
tract-core = "0.20"
image = { version = "0.24", features = ["jpeg", "png"] }
base64 = "0.21"
sha2 = "0.10.9"
anyhow = "1.0"
num-traits = "0.2"
bigdecimal = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
subtle = "2.4"
hmac = "0.12"
regex = "1.0"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
md5 = "0.7"
ammonia = "4.1"

[profile.release]
opt-level = "z"  # Optimize for size
codegen-units = 1
lto = true
strip = true
panic = "abort"
